# agentforensics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HARNESS.yml  Makefile  README.md  SECURITY.md  docker-compose.yml  opencode.jsonc  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  verification.md
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
examples/: demo_timeline.json  quickstart.py  sample_incident.json
policies/: default.yaml
progress/: current.md
reports/: test-results.md
src/agentforensics/: __init__.py  cli.py  engine.py
src/agentforensics/export/: __init__.py  mcpguard_policy.py  mcpscop.py
src/agentforensics/ingest/: __init__.py  agentgate.py  generic.py  mcpguard.py  parser.py
src/agentforensics/replay/: __init__.py  anomaly.py  diff.py  player.py
src/agentforensics/reports/: __init__.py  compliance.py  evidence.py  generator.py  incident.py
src/agentforensics/reports/templates/: report.html.jinja2
src/agentforensics/timeline/: __init__.py  builder.py  correlator.py  visualizer.py
src/agentforensics/utils/: __init__.py  crypto.py  dates.py
src/agentforensics/web/: __init__.py  server.py
src/agentforensics/web/static/: style.css
src/agentforensics/web/templates/: base.html  dashboard.html  reports.html  timeline.html
tests/: test_cli.py  test_engine.py  test_integration.py  test_web.py
tests/test_export/: test_export.py
tests/test_ingest/: test_ingestion.py
tests/test_replay/: test_replay.py
tests/test_reports/: test_reports.py
tests/test_timeline/: test_timeline.py
